fixed table alignment

--- a/src/app/components/core/south/south-service-modal/south-service-modal.component.css
+++ b/src/app/components/core/south/south-service-modal/south-service-modal.component.css
@@ -5,3 +5,7 @@
 .is-hidden {
   display: none;
 }
+
+.align {
+  vertical-align: middle;
+}
